--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light">Toronto  Toronto  Toronto</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/artsy/jobs/1926425'>Job Application for Senior iOS Engineer at Artsy</a></h5> 
+<h5><a href='https://boards.greenhouse.io/artsy/jobs/1926425'>Job Application for Senior iOS Engineer at Artsy</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/arsenalbio/1535748e-0b81-4557-a236-6476f70cd3f6'>Arsenal Biosciences - Genome Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/arsenalbio/1535748e-0b81-4557-a236-6476f70cd3f6'>Arsenal Biosciences - Genome Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... as CRISPR-based genome engineering, scaled and high throughput target 
 identification synthetic biology, and machine learning to advance a new 
@@ -291,11 +291,11 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p>2 days ago ... Working for Trunk Club. When you join Trunk Club, you join the Nordstrom family. 
 Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4472927002'>Job Application for iOS Software Engineer  at Oodle Finance</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4472927002'>Job Application for iOS Software Engineer  at Oodle Finance</a></h5> 
 <p><span class="badge badge-light">London  London Oxford</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
+<h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -372,7 +372,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4471154002'>Job Application for iOS Engineer II at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4471154002'>Job Application for iOS Engineer II at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -423,7 +423,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://kanopi.workable.com/j/7611843486'>Kanopi Studios - Jobs: WordPress Engineer - Remote - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kanopi.workable.com/j/7611843486'>Kanopi Studios - Jobs: WordPress Engineer - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
