--- a/android-engineer.html
+++ b/android-engineer.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -116,7 +116,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697995659-sr-android-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Android Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697995659-sr-android-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Android Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -285,7 +285,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">United States  NYC</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -305,7 +305,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -393,7 +393,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tribalscale.workable.com/j/3ABCE94131'>TribalScale - Jobs: Android Engineer - Toronto - Apply online</a></h5> 
+<h5><a href='https://tribalscale.workable.com/j/3ABCE94131'>TribalScale - Jobs: Android Engineer - Toronto - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
