--- a/android-developer.html
+++ b/android-developer.html
@@ -130,7 +130,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Vietnam Vietnam  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
+<h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
       Android Developer - Supermercato24
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -148,7 +148,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.jobsaddaa.com/jobs/senior-android-developer-job-in-gm-global-products-sales-pvt-ltd-hiring-for-hiring-for-gm-global-products-sales-pvt-ltd/'>Senior Android Developer Job in GM Global Products &amp; Sales Pvt. Ltd Hiring For Hiring for GM Global Products &amp; Sales Pvt. Ltd | JobsAddaa.com</a></h5> 
+<h5><a href='https://www.jobsaddaa.com/jobs/senior-android-developer-job-in-gm-global-products-sales-pvt-ltd-hiring-for-hiring-for-gm-global-products-sales-pvt-ltd/'>Senior Android Developer Job in GM Global Products &amp; Sales Pvt. Ltd Hiring For Hiring for GM Global Products &amp; Sales Pvt. Ltd | JobsAddaa.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -205,12 +205,12 @@ with a passion for creating innovative digital experiences, to help us launch th
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cartrack.teamtailor.com/jobs/249718-android-developer'>Android Developer - Cartrack</a></h5> 
+<h5><a href='https://cartrack.teamtailor.com/jobs/249718-android-developer'>Android Developer - Cartrack</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 9, 2019 ... Job Description. We are looking for an Android developer responsible for the 
 development and maintenance of applications aimed at the public as well as?...</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/jgvhXRlqaB/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/jgvhXRlqaB/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -248,7 +248,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/fd5e3fde-24a6-4a7a-a2a9-c629ea3f8f6d'>Bee Talents - Android Developer - Kangaroo [do $5500 netto B2B]</a></h5> 
+<h5><a href='https://jobs.lever.co/beetalents/fd5e3fde-24a6-4a7a-a2a9-c629ea3f8f6d'>Bee Talents - Android Developer - Kangaroo [do $5500 netto B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -258,7 +258,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://syone2.recruitee.com/o/ref-6672019-android-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-6672019-android-developer'>
       (Ref. 667/2019) Android Developer - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -268,7 +268,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Canada London</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -290,7 +290,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://armut.applytojob.com/apply/bqKrFJIgHX/Android-Developer'>Android Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/bqKrFJIgHX/Android-Developer'>Android Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Apply to Android Developer at Armut Teknoloji AS in Istanbul, Turkey.</p>
 <hr/>
@@ -369,7 +369,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hiretale.com/jobs/view/14944/FieldAssist-Sr-Android-Developer'>
+<h5><a href='https://www.hiretale.com/jobs/view/14944/FieldAssist-Sr-Android-Developer'>
         FieldAssist - Sr Android Developer (3-6 yrs), Gurgaon, OOPs,MVP,MVVM,Android,Kotlin,Mobile App Development, (Mobile App Development jobs) - hiretale.com    </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
@@ -414,7 +414,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -426,7 +426,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/EhHNeliOAp/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/EhHNeliOAp/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -459,7 +459,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Flink1/743999696997351-senior-android-developer'>Flink Senior Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Flink1/743999696997351-senior-android-developer'>Flink Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -489,7 +489,7 @@ Android Developer at Streami Inc. in Taepyeongno 1(il)-ga | Android jobs | 42job
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999696935501-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999696935501-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
